src/styles/Item.css
img {
    height: 70%;
    width: 70%;
}

fieldset {
    border-radius: 35px;
}

.itemDiv {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    grid-row-gap: 20px;
    grid-column-gap: 15px;
    clear: both;
    text-align: center;

}

.itemBox {
    width: 100%;
    overflow: hidden;
}

.itemBox:hover {
    filter: contrast(200%);
    transform: scale(1.1);    
}

.item-text {
    position: relative;
    background-color: rgba(0, 0, 0, 0.6);
    background-size: cover;
    width: 109%;
    bottom: -32px;
    left: -13px;
    border-radius: 0 0 35px 35px;
    -webkit-text-stroke: .2px plum;
    letter-spacing: 1px;
    font-size: 120%;
}

.rarity {
    background-repeat: no-repeat;
    background-size: 100% 100%;
}

@media only screen and (max-width: 985px) {
    .itemDiv {
        grid-template-columns: repeat(3, 1fr);
    }
}

@media only screen and (max-width: 700px) {
    .itemDiv {
        grid-template-columns: repeat(2, 1fr);
    }
}

@media only screen and (max-width: 840px) {
    .itemDiv {
        grid-template-columns: repeat(2, 1fr);
    }
}

@media only screen and (max-width: 650px) {
    .itemDiv {
        grid-template-columns: none;
    }
}

